add new method get block by id
