# api/handlers/blocks/handler.go
@@ -13,7 +13,6 @@ import (
 	"google.golang.org/grpc/credentials/insecure"
 	"net/http"
 	"strconv"
-	"time"
 )
 
 type handlerBlocks struct {
@@ -68,14 +67,14 @@ func (h *handlerBlocks) GetAllBlocks(c *fiber.Ctx) error {
 
 	var blocks []*Block
 	for _, block := range resBlocks.Data {
+		/*
+			layout := "2006-01-02 15:04:05.999999999 -0700 MST"
 
-		layout := "2006-01-02 15:04:05.999999999 -0700 MST"
-
-		timestamp, _ := time.Parse(layout, block.Timestamp)
-		createdAt, _ := time.Parse(layout, block.CreatedAt)
-		updatedAt, _ := time.Parse(layout, block.UpdatedAt)
-		minedAt, _ := time.Parse(layout, block.MinedAt)
-		lastValidationDate, _ := time.Parse(layout, block.LastValidationDate)
+			timestamp, _ := time.Parse(layout, block.Timestamp)
+			createdAt, _ := time.Parse(layout, block.CreatedAt)
+			updatedAt, _ := time.Parse(layout, block.UpdatedAt)
+			minedAt, _ := time.Parse(layout, block.MinedAt)
+			lastValidationDate, _ := time.Parse(layout, block.LastValidationDate)*/
 
 		blocks = append(blocks, &Block{
 			Id:                 block.Id,
@@ -83,19 +82,90 @@ func (h *handlerBlocks) GetAllBlocks(c *fiber.Ctx) error {
 			Nonce:              block.Nonce,
 			Difficulty:         block.Difficulty,
 			MinedBy:            block.MinedBy,
-			MinedAt:            minedAt,
-			Timestamp:          timestamp,
+			MinedAt:            block.MinedAt,
+			Timestamp:          block.Timestamp,
 			Hash:               block.Hash,
 			PrevHash:           block.PrevHash,
 			StatusId:           block.StatusId,
 			IdUser:             block.IdUser,
-			LastValidationDate: lastValidationDate,
-			CreatedAt:          createdAt,
-			UpdatedAt:          updatedAt,
+			LastValidationDate: block.LastValidationDate,
+			CreatedAt:          block.CreatedAt,
+			UpdatedAt:          block.UpdatedAt,
 		})
 	}
 
 	res.Data = blocks
+	res.Code, res.Type, res.Msg = msg.GetByCode(29, h.DB, h.TxID)
+	res.Error = false
+	return c.Status(http.StatusOK).JSON(res)
+}
+
+// GetBlockById godoc
+// @Summary Método para obtener un bloque de la Blockchain por su ID
+// @Description Método para obtener un bloque de la Blockchain por su ID
+// @tags Block
+// @Accept json
+// @Produce json
+// @Param block path int true "Id del bloque"
+// @Success 200 {object} ResBlock
+// @Router /api/v1/block/{id} [get]
+func (h *handlerBlocks) GetBlockById(c *fiber.Ctx) error {
+	res := ResBlock{Error: true}
+	e := env.NewConfiguration()
+
+	blockStr := c.Params("id")
+	blockId, err := strconv.ParseInt(blockStr, 10, 16)
+	if err != nil {
+		logger.Error.Printf("no se pudo obtener el id del bloque: %s", err)
+		res.Code, res.Type, res.Msg = msg.GetByCode(1, h.DB, h.TxID)
+		return c.Status(http.StatusAccepted).JSON(res)
+	}
+
+	connBk, err := grpc.Dial(e.BlockService.Port, grpc.WithTransportCredentials(insecure.NewCredentials()))
+	if err != nil {
+		logger.Error.Printf("error conectando con el servicio auth de blockchain: %s", err)
+		res.Code, res.Type, res.Msg = msg.GetByCode(22, h.DB, h.TxID)
+		return c.Status(http.StatusAccepted).JSON(res)
+	}
+	defer connBk.Close()
+
+	clientBlock := blocks_proto.NewBlockServicesBlocksClient(connBk)
+
+	resBlocks, err := clientBlock.GetBlockByID(context.Background(), &blocks_proto.GetByIdRequest{Id: blockId})
+	if err != nil {
+		logger.Error.Printf("No se pudo conectar con el servicio block engine, Error: %v", err)
+		res.Code, res.Type, res.Msg = msg.GetByCode(22, h.DB, h.TxID)
+		return c.Status(http.StatusAccepted).JSON(res)
+	}
+	if resBlocks == nil {
+		logger.Error.Printf("No se pudo conectar con el servicio block engine")
+		res.Code, res.Type, res.Msg = msg.GetByCode(22, h.DB, h.TxID)
+		return c.Status(http.StatusAccepted).JSON(res)
+	}
+	if resBlocks.Error {
+		logger.Error.Printf(resBlocks.Msg)
+		res.Code, res.Type, res.Msg = int(resBlocks.Code), int(resBlocks.Type), resBlocks.Msg
+		return c.Status(http.StatusAccepted).JSON(res)
+	}
+
+	data := resBlocks.Data
+
+	res.Data = &Block{
+		Id:                 data.Id,
+		Data:               data.Data,
+		Nonce:              data.Nonce,
+		Difficulty:         data.Difficulty,
+		MinedBy:            data.MinedBy,
+		MinedAt:            data.MinedAt,
+		Timestamp:          data.Timestamp,
+		Hash:               data.Hash,
+		PrevHash:           data.PrevHash,
+		StatusId:           data.StatusId,
+		IdUser:             data.IdUser,
+		LastValidationDate: data.LastValidationDate,
+		CreatedAt:          data.CreatedAt,
+		UpdatedAt:          data.UpdatedAt,
+	}
 	res.Code, res.Type, res.Msg = msg.GetByCode(29, h.DB, h.TxID)
 	res.Error = false
 	return c.Status(http.StatusOK).JSON(res)
