# docs/swagger.yaml
@@ -69,6 +69,19 @@ definitions:
       type:
         type: integer
     type: object
+  blocks.ResBlock:
+    properties:
+      code:
+        type: integer
+      data:
+        $ref: '#/definitions/blocks.Block'
+      error:
+        type: boolean
+      msg:
+        type: string
+      type:
+        type: integer
+    type: object
   blocks.resCurrentLottery:
     properties:
       code:
@@ -545,6 +558,27 @@ info:
   title: BLion
   version: "1.1"
 paths:
+  /api/v1/block/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Método para obtener un bloque de la Blockchain por su ID
+      parameters:
+      - description: Id del bloque
+        in: path
+        name: block
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/blocks.ResBlock'
+      summary: Método para obtener un bloque de la Blockchain por su ID
+      tags:
+      - Block
   /api/v1/block/current-lottery:
     get:
       consumes:
@@ -763,21 +797,15 @@ paths:
       summary: Método para exportar firmas por id
       tags:
       - Sign
-  /api/v1/transactions/{trx}/{block}:
+  /api/v1/transaction/{trx}:
     get:
       description: Método para obtener una transacción de la blockchain por su id
-        y el id del bloque
       parameters:
       - description: Id de la transacción
         in: path
         name: trx
         required: true
         type: string
-      - description: Id del bloque
-        in: path
-        name: block
-        required: true
-        type: string
       produces:
       - application/json
       responses:
@@ -785,13 +813,13 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/transactions.ResTransaction'
-      summary: Método para obtener una transacción de la blockchain
+      summary: Método para obtener una transacción de la blockchain por su id
       tags:
       - Transacción
-  /api/v1/transactions/all/{block}:
+  /api/v1/transaction/all/{block}:
     get:
-      description: Método para obtener todas las transacciones por id del bloque de
-        la blockchain
+      description: Método para obtener todas las transacciones por el id del bloque
+        de la blockchain
       parameters:
       - description: Id del bloque
         in: path
@@ -805,10 +833,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/transactions.ResTransaction'
-      summary: Método para obtener todas las transacciones por id del bloque
+      summary: Método para obtener todas las transacciones por el id del bloque
       tags:
       - Transacción
-  /api/v1/transactions/all/{limit}/{offset}:
+  /api/v1/transaction/all/{limit}/{offset}:
     get:
       description: Método para obtener todas las transacciones de la blockchain
       parameters:
